Fixed spacing on login

--- a/client/src/pages/Login/Login.scss
+++ b/client/src/pages/Login/Login.scss
@@ -25,7 +25,7 @@
         box-shadow: 5px 5px 10px rgba(rgb(7, 94, 7), 0.1),
             0 0 3px rgba(rgb(7, 94, 7), 0.1);
 
-        padding: 40px;
+        padding: 30px;
         border-radius: 20px;
         display: flex;
         flex-direction: column;
@@ -42,7 +42,7 @@
 
         h1 {
             text-align: center;
-            margin-bottom: 50px;
+            margin-bottom: 30px;
         }
 
         input {
